# autoasync

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
autoasync/: __init__.py  _core.py  _proxy.py
tests/: test_asyncify.py  test_proxy.py
